--- a/templates/about.html
+++ b/templates/about.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>About Page</title>
-    </head>
-    <body>
-        About Page
-    </body>
-</html>
+${commonHeader}
+<h1>About Page</h1>
+My name is ${name} and I have created this template engine.
+${commonFooter}
