--- a/templates/commonHeader.html
+++ b/templates/commonHeader.html
@@ -7,6 +7,7 @@
         <title>Common Page</title>
     </head>
     <body>
-        Common Page
-    </body>
-</html>
+        <a href="./home.html">Home Page</a>
+        <br />
+        <a href="./about.html">About Page</a>
+        <br />
